--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,14 @@
         <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
         <param-value>/WEB-INF/bookstore.taglib.xml</param-value>
     </context-param>
+    <filter>
+        <filter-name>userLoginFilter</filter-name>
+        <filter-class>filter.userLoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>userLoginFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
