--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,12 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+    <resource-ref>
+        <description>JDBC Connection Pool</description>
+        <res-ref-name>jdbc/bookstore</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <!--<res-auth>Container</res-auth>-->
+    </resource-ref>
     <session-config>
         <session-timeout>
             30
@@ -49,4 +55,5 @@
         <description/>
         <role-name>customer</role-name>
     </security-role>
+
 </web-app>
