--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,11 @@
             <version>${javaee.api.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.omnifaces</groupId>
+            <artifactId>omnifaces</artifactId>
+            <version>2.5.1</version>
+        </dependency>
         <!-- JERSEY DEPENDENCIES -->
         <dependency>
             <groupId>com.sun.jersey</groupId>
