--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
         <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
         <param-value>/WEB-INF/bookstore.taglib.xml</param-value>
     </context-param>
-    <filter>
+<!--    <filter>
         <filter-name>AuthFilter</filter-name>
         <filter-class>filters.AuthFilter</filter-class>
     </filter>
@@ -12,7 +12,7 @@
         <filter-name>AuthFilter</filter-name>
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
-    </filter-mapping>
+    </filter-mapping>-->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -38,12 +38,6 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
-    <resource-ref>
-        <description>JDBC Connection Pool</description>
-        <res-ref-name>jdbc/bookstore</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <!--<res-auth>Container</res-auth>-->
-    </resource-ref>
     <session-config>
         <session-timeout>
             30
